// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorization - Base policy Anonymous access 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ"
  }
}
`;

exports[`Authorization - Base policy JWT pass all policies 1`] = `
Object {
  "bp_bar": "BAR",
  "bp_baz": "BAZ",
  "bp_foo": "FOO",
  "bp_taz": "TAZ",
}
`;

exports[`Authorization - Base policy JWT pass base and regular policy 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": "FOO",
    "bp_bar": "BAR",
    "bp_baz": null,
    "bp_taz": "TAZ"
  }
}
`;

exports[`Authorization - Base policy JWT pass none of policies 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ"
  }
}
`;

exports[`Authorization - Base policy JWT pass only base policy 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"regular_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": "FOO",
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ"
  }
}
`;

exports[`Authorization - Base policy JWT pass only override policy 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": "BAZ",
    "bp_taz": "TAZ"
  }
}
`;

exports[`Authorization - Base policy JWT pass only regular policy 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ"
  }
}
`;

exports[`Authorization - Base policy JWT pass regular and override policy 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": "BAZ",
    "bp_taz": "TAZ"
  }
}
`;
